--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "mapbox-gl": "^3.9.4",
-    "maplibre-gl": "^5.1.0",
-    "next": "15.1.0",
-    "react": "^19.0.0",
+    "maplibre-gl": "^4.7.1",
+    "next": "^15.1.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-map-gl": "^7.1.9",
@@ -53,13 +53,19 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@types/react": "^18.2.45"
   }
 }
