--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vis.gl/react-maplibre": "^1.0.0-alpha.4",
     "add": "^2.0.6",
     "axios": "^1.7.9",
+    "browser-image-compression": "^2.0.2",
     "card": "^2.5.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
